Mon Jul 18 08:13:14 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Admin.cpp:

          Attempt to fix compile errors on Irix resulting from partially
        defined types.

Mon Jul 18 05:15:49 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:

          #include "ace/OS_NS_sys_time.h" to bring ACE_OS::gettimeofday()
          definition into scope for noinline builds.

        * orbsvcs/orbsvcs/Log/Hash_LogStore.cpp:

          #include "ace/Auto_Ptr.h" to bring auto_ptr<> template into
          scope for noinline builds.

        * orbsvcs/orbsvcs/Log/BasicLogFactory_i.cpp:
        * orbsvcs/orbsvcs/Log/EventLogFactory_i.cpp:
        * orbsvcs/orbsvcs/Log/NotifyLogFactory_i.cpp:
        * orbsvcs/orbsvcs/Log/RTEventLogFactory_i.cpp:

          #include "ace/OS_NS_stdio.h" to bring ACE_OS::sprintf()
          definition into scope for noinline builds.

Mon Jul 18 06:53:00 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tao/PortableServer/RequestProcessingStrategyDefaultServant.cpp:

          Fixed a bug where using reference_to_servant() with the
          DefaultServant strategy incremented the reference count by two
          instead of one.

        * tests/POA/Default_Servant/Default_Servant.cpp:

          Added tests to check that the reference count is correctly
          maintained when using reference_to_servant() with the Root POA
          and the Default Servant POA.

Mon Jul 18 08:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Any_Impl.{h,cpp}:
        * tao/LocalObject.{h,cpp,i}:
        * tao/Messaging/AMH_Response_Handler.cpp:
        * tao/Valuetype/ValueFactory.{h,cpp}:
          Use ACE_Atomic_Op for the refcount

Mon Jul 18 08:43:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Codeset_Descriptor_Base.h:
        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.h:
          Fixed fuzz errors
