@@ -1,3 +1,10 @@
+Mon Jul 18 15:05:03 2005  Boris Kolpackov  <boris@kolpackov.net>
+
+	* orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
+	* orbsvcs/examples/Notify/Federation/Gate/Gate.cpp:
+
+	  Fixed a bunch of warnings.
+
 Mon Jul 18 08:13:14 2005  Justin Michel  <michel_j@ociweb.com>
 
         * orbsvcs/orbsvcs/Notify/Admin.cpp:
